src/styles/tecidos.css
.tecidos-container {
  position: relative;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

.tecidos-container main {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  position: relative;
}

.tecidos-container *,
.tecidos-container *::before,
.tecidos-container *::after {
  box-sizing: border-box;
}

.container-imagens {
  position: relative;
  width: 100%;
  height: 100%;
}

.homem {
  position: absolute;
  top: 5%;
  left: -15%;
  z-index: 2;
}

.homem img {
  display: block;
  width: 80vw;
  height: auto;
}

.mulher {
  position: relative;
  right: -3vw;
  top: -17vw;
  z-index: 2;
}

.mulher img {
  display: block;
  width: 100%;
  height: auto;
}

.caixa-texto {
  position: absolute;
  right: 10vw;
  bottom: 15vh;
  text-align: left;
  z-index: 3;
}

.titulo {
  display: inline-block;
  background-color: #f9b734;
  padding: 1rem 1.6rem;
  margin-bottom: 0.6rem;
  font-size: 2.8rem;
  font-family: "Montserrat", sans-serif;
  font-style: bold;
  font-weight: 700;
  color: #ffffff;
  line-height: 1.1;
  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
}

.subtitulo {
  font-size: 1.3rem;
  font-family: "Montserrat", sans-serif;
  font-style: bold;
  font-weight: 600;
  color: #ffffff;
  margin: 0;
  line-height: 1.4;
}

